SERVER-49959 Fix unitialized scalar field in collection catalog